fix text alignment in cards

--- a/myappmarks/css/main.css
+++ b/myappmarks/css/main.css
@@ -131,6 +131,7 @@ div.full-width-btn {
 
 div.card {
 	background: white;
+	text-align: left;
 }
 
 div.blurb {
